<resources>
    <string name="app_name" translatable="false">My Library</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4769341895289435/3740778936</string>

    <string name="coma" translatable="false">,</string>
    <string name="edit_string">Edit</string>
    <string name="delete_string">Delete</string>
    <string name="delete_message">You want to delete this book?</string>
    <string name="permission_denied">Permission denied</string>
    <string name="library_string">Library</string>
    <string name="book_detail_title">Book detail</string>
    <string name="add_book_title">Add new book</string>
    <string name="filter_book_title">Filter Books</string>
    <string name="search_edit_text_hint">Title, Author</string>
    <string name="share_string">Share</string>


    <string name="title_tag">Title</string>
    <string name="last_name_tag">Last name</string>
    <string name="first_name_tag">First name</string>
    <string name="publisher_tag">Publisher</string>
    <string name="publisher_tag_detail">Publisher:</string>
    <string name="published_date_tag">Published Date:</string>
    <string name="published_date_format_hint">dd/mm/yyyy</string>
    <string name="number_page_tag">Number of pages:</string>
    <string name="series_tag">Series:</string>
    <string name="volume_tag">Vol:</string>
    <string name="category_tag">Category:</string>
    <string name="summary_tag">Summary</string>
    <string name="summary_hint">Book summary here</string>
    <string name="pages_string" formatted="true">%d pages</string>


    <string name="sort_by_key" translatable="false">sort_by</string>
    <string name="sort_by_title">Sort by</string>
    <string name="library_name_key" translatable="false">library_name</string>
    <string name="library_name_title">Library name</string>


    <string name="action_change_view">Change View</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_done">Done</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Keep your books organized</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="settings_string"> Settings </string>


    <string name="error_image_message">Error loading image</string>
    <string name="complete_title_warning">Add a title</string>
    <string name="complete_last_name_warning">Add Last Name author</string>
    <string name="share_title">Share book</string>
    <string name="by_string">by</string>
    <string name="edit_category_key" translatable="false">edit_category_key</string>
    <string name="edit_category_title">Edit category</string>
    <string name="edit_category_summary">Add, delete or rename categories.</string>
    <string name="add_category" translatable="false">add_category</string>
    <string name="ok" translatable="false">OK</string>
    <string name="new_category">New category</string>
    <string name="name">Name:</string>
    <string name="rename_title">Rename</string>
    <string name="add_new_category">Add new category</string>
    <string name="list_view_book" translatable="false">list_view_book</string>
    <string name="delete_library_key" translatable="false">delete_library_key</string>
    <string name="delete_library_title">Delete library</string>
    <string name="cover_book_view_description" translatable="false">cover_description</string>
    <string name="delete_library_summary">Delete all your books</string>
    <string name="delete_library_message">Are you sure to delete your library</string>
    <string name="export_library">Export library</string>
    <string name="import_library">Import library</string>
    <string name="support_developer">Support developer</string>
    <string name="about">About</string>
    <string name="warning_exporting_message">Book cover probably won\'t get exported. This document will be on Download folder in your device.</string>
    <string name="export_confirmed">Your library is exported.</string>
    <string name="import_error">Error importing</string>
    <string name="warning_importing_message">File must be on csv format.</string>
    <string name="delete_library_confirmed">Library deleted</string>
    <string name="rate_string">Rate</string>
    <string name="contact_string">Contact us</string>
    <string name="about_announcement">This app is designed to help organize your books into one application. Enjoy using this application and let us know your feedback so we can improve functionality of the app.</string>
    <string name="error_occurred">An error occurred</string>
    <string name="description_cover_module" translatable="false">cover_module_image_view</string>
    <string name="select_image">Select image from device</string>
    <string name="take_photo">Use camera</string>
    <string name="add_book_button_description" translatable="false">add_book_button</string>
    <string name="scan_isbn_description" translatable="false">scan_isbn</string>
    <string name="search_online_description" translatable="false">search_online</string>
    <string name="search_image_view_description" translatable="false">search_image_view</string>
    <string name="cancel_image_view_description" translatable="false">cancel_image_view</string>
    <string name="search_online_title">Online</string>
    <string name="save_to_library_string">Save to library</string>
    <string name="shop_string">Shop</string>


    //Category List
    <string name="others_category">Others</string>
    <string name="art_design_category"><![CDATA[Art & Design]]></string>
    <string name="business_financial_category"><![CDATA[Business & Financial]]></string>
    <string name="children_book_category">Children\'s Books</string>
    <string name="comic_graphic_novels_category"><![CDATA[Comics & Graphic Novels]]></string>
    <string name="education_engineering"><![CDATA[Education & Engineering]]></string>
    <string name="history_category">History</string>
    <string name="literature_fiction_category"><![CDATA[Literature & Fiction]]></string>
    <string name="politics_social_sciences_category"><![CDATA[Politics & Social Sciences]]></string>
    <string name="travel_category">Travel</string>


    //Array Sort by

    <string name="Title">Title</string>
    <string name="Author_Last_name">Author\'s Last name</string>
    <string name="Author_First_name">Author\'s First name</string>
    <string name="Series">Series</string>
    <string name="Date_Added">Date added</string>
    <string name="title" translatable="false">title</string>
    <string name="last_name" translatable="false">lastName</string>
    <string name="first_name" translatable="false">firstName</string>
    <string name="series" translatable="false">series</string>
    <string name="date_added" translatable="false">dateAdded</string>

    <string name="No_Connection">Check internet connection.</string>
    <string name="error_only_numbers">Insert only numbers into pages.</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="delete_category_message">Are you sure you want to delete this category?</string>
    <string name="log_in_title">Sign In</string>
    <string name="email_example">name@example.com</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot password, click here!</u></string>
    <string name="register_here"><u>Not register yet?, click here.</u></string>
    <string name="register_title">Register</string>
    <string name="name_example">User name</string>
    <string name="re_enter_password">Confirm password</string>
    <string name="log_in_here"><u>Already registered, sign in here.</u></string>
    <string name="invalid_email">Enter a valid email</string>
    <string name="invalid_password">Password must be at least 6 digits</string>
    <string name="error_name">Please enter a user name</string>
    <string name="wrong_password">Wrong password</string>
    <string name="error" translatable="false">Error</string>
    <string name="verification_sent">Verification email sent</string>
    <string name="enter_email">Please, provide your email to send the code</string>
    <string name="code_sent">Code sent</string>
    <string name="verification_missed">You haven\'t verified your email. If you haven\'t received the verification email click here to send a new one.</string>
    <string name="account_activity">Account</string>
    <string name="account_welcome" formatted="true">Hello, %s</string>
    <string name="backup_now">Back up now</string>
    <string name="recommended">Recommended</string>

</resources>
