<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <EditTextPreference
        android:defaultValue="@string/library_string"
        android:key="@string/library_name_key"
        android:title="@string/library_name_title"
        app:iconSpaceReserved="false"/>

    <ListPreference
        android:entries="@array/sort_by_list_entries"
        android:entryValues="@array/sort_by_list_values"
        android:defaultValue="@string/date_added"
        android:key="@string/sort_by_key"
        android:title="@string/sort_by_title"
        app:icon="@drawable/ic_sort"/>

    <Preference
        android:key="@string/edit_category_key"
        android:title="@string/edit_category_title"
        app:icon="@drawable/ic_category"/>

    <Preference
        android:key="@string/delete_library_key"
        android:title="@string/delete_library_title"
        app:icon="@drawable/ic_delete_all"/>

</PreferenceScreen>