<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/shop_action"
        android:title="@string/shop_string"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/save_to_library"
        android:title="@string/save_to_library_string"
        android:icon="@drawable/ic_save_to_library"
        android:orderInCategory="2"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/edit_action"
        android:title="@string/edit_string"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete_action"
        android:title="@string/delete_string"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/share_action"
        android:title="@string/share_string"
        android:icon="@drawable/ic_share"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"/>


</menu>