<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/filter_book_title"
            app:titleMarginStart="20dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>


    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"/>

    <LinearLayout
        android:id="@+id/author_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:weightSum="10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/author_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:padding="@dimen/search_edit_text_padding"
            android:textSize="22sp"
            android:text="@string/last_name_tag"/>

        <Spinner
            android:id="@+id/author_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/category_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:weightSum="10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/category_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:padding="@dimen/search_edit_text_padding"
            android:textSize="22sp"
            android:text="@string/category_tag"/>

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:weightSum="10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/series_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:padding="@dimen/search_edit_text_padding"
            android:textSize="22sp"
            android:text="@string/series_tag"/>

        <Spinner
            android:id="@+id/series_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"/>



    </LinearLayout>





</LinearLayout>