<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pull_to_refresh"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/adView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_books_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:longClickable="true"
            android:padding="@dimen/module_padding"/>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pull_to_refresh"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/scan_isbn_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/scan_isbn_description"
            android:background="@drawable/bottom_button_shape"
            android:src="@drawable/ic_barcode"
            android:onClick="scanIsbnClick"
            android:visibility="gone"/>

        <Button
            android:id="@+id/search_online_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="13dp"
            android:paddingBottom="7dp"
            android:contentDescription="@string/search_online_description"
            android:background="@drawable/bottom_button_shape"
            android:drawableTop="@drawable/ic_search"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:text="@string/search_online_title"
            android:textSize="10sp"
            android:onClick="searchOnlineClick"
            android:visibility="visible"/>


        <ImageButton
            android:id="@+id/add_book_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_book_button_description"
            android:background="@drawable/bottom_button_shape"
            android:src="@drawable/ic_add_white"
            android:onClick="addBookClick"/>




    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>

