<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.RecommendedActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_fragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_close"
            android:onClick="closeOnClick"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/recommended_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/recommended"
            android:textColor="@color/icons"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/close_btn"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/shop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_shopping_cart"
            android:onClick="shopOnClick"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/book_image_view"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_marginTop="28dp"
        android:layout_marginStart="@dimen/left_right_margin"
        android:baseline="140dp"
        android:src="@drawable/ic_add_book"
        android:contentDescription="@string/cover_book_view_description"
        app:layout_constraintTop_toBottomOf="@id/toolbar_fragment"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/title_size_detail"
        android:maxLength="40"
        app:layout_constraintTop_toTopOf="@id/book_image_view"
        app:layout_constraintStart_toEndOf="@id/book_image_view"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/author_size_detail"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/summary_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_tag"
        android:visibility="invisible"
        style="@style/detail_tag_display"
        app:layout_constraintTop_toBottomOf="@id/book_image_view"
        app:layout_constraintStart_toStartOf="parent"/>



    <androidx.core.widget.NestedScrollView
        android:id="@+id/summary_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:visibility="invisible"
        android:background="@drawable/scrollview_shape_summary"
        app:layout_constraintTop_toBottomOf="@id/summary_tv">



        <TextView
            android:id="@+id/summary_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/left_right_margin"
            android:background="@color/transparent"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"/>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>